--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pin Generator</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -39,27 +40,29 @@
                                 <div class="button">3</div>
                             </div>
                             <div class="calc-button-row">
-                                <div class="button"><</div>
-                                <div class="button">0</div>
-                                <div class="button">C</div>
-                            </div>
+                                <div class="button">
+                                    << /div>
+                                        <div class="button">0</div>
+                                        <div class="button">C</div>
+                                </div>
 
-                            <div>
-                                <button onclick="verifyPin()" id="pin-submit" type="submit" class="submit-btn">Submit</button>
-                                <p class="action-left">3 try left</p>
+                                <div>
+                                    <button onclick="verifyPin()" id="pin-submit" type="submit"
+                                        class="submit-btn">Submit</button>
+                                    <p class="action-left">3 try left</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="notify-section">
+                    <p id="not-match-notify" class="notify">❌ Pin Didn't Match, Please try again</p>
+                    <p id="match-notify" class="notify">✅ Pin Matched... Secret door is opening for you</p>
+                </div>
             </div>
-            <div class="notify-section">
-                <p id="not-match-notify" class="notify">❌ Pin Didn't Match, Please try again</p>
-                <p id="match-notify" class="notify">✅ Pin Matched... Secret door is opening for you</p>
-            </div>
-        </div>
 
-        <script src="script.js"></script>
-    </div>
+            <script src="app.js"></script>
+        </div>
 </body>
 
 </html>
